test/good/functions/lambda06.px

func call(Bool->String->Void f) def
    f(true, "$")

func f(Int a, Bool b, Char c, String d: "---") def
    print a, b, c, d

call(lambda b, d -> f(6, b, 'a'))
call(f(42, _, d=_, c='x'))
