test/bad/functions/call08.px

func f(a: Int, b: Bool, c: Char = 'd', s: String = ""): Void def
    return

f(a=6, s="s", c='x')
